--- a/doc/agile/v1/sprint_backlog_20.org
+++ b/doc/agile/v1/sprint_backlog_20.org
@@ -12,20 +12,20 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-11-23 Sat 18:28]
+#+CAPTION: Clock summary at [2019-11-24 Sun 22:32]
 | <75>                                               |         |       |       |       |
 | Headline                                           | Time    |       |       |     % |
 |----------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                       | *17:21* |       |       | 100.0 |
+| *Total time*                                       | *22:20* |       |       | 100.0 |
 |----------------------------------------------------+---------+-------+-------+-------|
-| Stories                                            | 17:21   |       |       | 100.0 |
-| Active                                             |         | 17:21 |       | 100.0 |
-| Edit release notes for previous sprint             |         |       | 11:24 |  65.7 |
-| Create a demo and presentation for previous sprint |         |       |  2:31 |  14.5 |
-| Sprint and product backlog grooming                |         |       |  1:16 |   7.3 |
-| Fix OSX build errors                               |         |       |  0:25 |   2.4 |
-| Nightly code coverage is not being reported        |         |       |  0:23 |   2.2 |
-| Add relational tracing support                     |         |       |  1:22 |   7.9 |
+| Stories                                            | 22:20   |       |       | 100.0 |
+| Active                                             |         | 22:20 |       | 100.0 |
+| Edit release notes for previous sprint             |         |       | 11:24 |  51.0 |
+| Create a demo and presentation for previous sprint |         |       |  2:31 |  11.3 |
+| Sprint and product backlog grooming                |         |       |  1:16 |   5.7 |
+| Fix OSX build errors                               |         |       |  0:25 |   1.9 |
+| Nightly code coverage is not being reported        |         |       |  0:23 |   1.7 |
+| Add relational tracing support                     |         |       |  6:21 |  28.4 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -327,6 +327,9 @@ the coverage tool.
 
 *** STARTED Add relational tracing support                            :story:
     :LOGBOOK:
+    CLOCK: [2019-11-24 Sun 21:01]--[2019-11-24 Sun 22:32] =>  1:31
+    CLOCK: [2019-11-24 Sun 16:35]--[2019-11-24 Sun 19:30] =>  2:55
+    CLOCK: [2019-11-23 Sat 18:29]--[2019-11-23 Sat 19:02] =>  0:33
     CLOCK: [2019-11-23 Sat 17:06]--[2019-11-23 Sat 18:28] =>  1:22
     :END:
 
@@ -414,6 +417,9 @@ Notes:
     model types.
   - implement the relational backend.
 - Add relational model to the dogen model tests.
+- add validation to database configuration in configuration validator.
+- consider renaming =add_initial_input= to "start run" or some such
+  name to align with relational model.
 
 Merged stories:
 
