--- a/doc/agile/v1/sprint_backlog_20.org
+++ b/doc/agile/v1/sprint_backlog_20.org
@@ -12,22 +12,22 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-11-25 Mon 23:40]
+#+CAPTION: Clock summary at [2019-11-25 Mon 23:46]
 | <75>                                               |         |       |       |       |
 | Headline                                           | Time    |       |       |     % |
 |----------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                       | *24:36* |       |       | 100.0 |
+| *Total time*                                       | *24:41* |       |       | 100.0 |
 |----------------------------------------------------+---------+-------+-------+-------|
-| Stories                                            | 24:36   |       |       | 100.0 |
-| Active                                             |         | 24:36 |       | 100.0 |
-| Edit release notes for previous sprint             |         |       | 11:24 |  46.3 |
+| Stories                                            | 24:41   |       |       | 100.0 |
+| Active                                             |         | 24:41 |       | 100.0 |
+| Edit release notes for previous sprint             |         |       | 11:24 |  46.2 |
 | Create a demo and presentation for previous sprint |         |       |  2:31 |  10.2 |
 | Sprint and product backlog grooming                |         |       |  2:01 |   8.2 |
 | Fix OSX build errors                               |         |       |  0:25 |   1.7 |
 | Nightly code coverage is not being reported        |         |       |  0:23 |   1.6 |
-| Add relational tracing support                     |         |       |  6:39 |  27.0 |
+| Add relational tracing support                     |         |       |  6:39 |  26.9 |
 | Add type overrides to primitives                   |         |       |  0:21 |   1.4 |
-| Fix broken build due to incorrect postgres library |         |       |  0:52 |   3.5 |
+| Fix broken build due to incorrect postgres library |         |       |  0:57 |   3.8 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -517,6 +517,7 @@ The mapping must appear before the type overrides.
 
 *** STARTED Fix broken build due to incorrect postgres library        :story:
     :LOGBOOK:
+    CLOCK: [2019-11-25 Mon 23:41]--[2019-11-25 Mon 23:46] =>  0:05
     CLOCK: [2019-11-25 Mon 22:48]--[2019-11-25 Mon 23:40] =>  0:52
     :END:
 
